[gd_scene load_steps=2 format=3 uid="uid://dxecmvlwh6pof"]

[ext_resource type="Script" uid="uid://kf41vagkf7jk" path="res://Vehicle/race_hud.gd" id="1_tlb42"]

[node name="RaceHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_tlb42")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="BestTimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="CheckpointsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SplitTimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
